Implement a naive path finder